--- a/AdorableCats/appsettings.json
+++ b/AdorableCats/appsettings.json
@@ -1,10 +1,15 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=catdb;User=root;Password=1234;"
+  }
 }
