sqluite runtime seeding!

--- a/AdorableCats/appsettings.json
+++ b/AdorableCats/appsettings.json
@@ -10,6 +10,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=catdb;User=root;Password=1234;"
+    "MySQLConnection": "Server=localhost;Database=catdb;User=root;Password=1234;",
+    "sqliteConnection": "C:\\Temp\\Cats"
   }
 }
